Add graph activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,15 @@
                         android:value=".view.activity.MainActivity" />
         </activity>
 
+        <activity
+                android:name=".view.activity.ChartActivity"
+                android:label="@string/app_name"
+                android:parentActivityName="net.wakamesoba98.saltmanager.view.activity.MainActivity" >
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".view.activity.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
