--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,8 @@
 
         <activity
             android:name=".view.activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,6 +22,7 @@
         <activity
                 android:name=".view.activity.InputActivity"
                 android:label="@string/app_name"
+                android:configChanges="orientation|screenSize|keyboardHidden"
                 android:parentActivityName="net.wakamesoba98.saltmanager.view.activity.MainActivity" >
                 <!-- Parent activity meta-data to support 4.0 and lower -->
                 <meta-data
@@ -31,11 +33,34 @@
         <activity
                 android:name=".view.activity.ChartActivity"
                 android:label="@string/app_name"
+                android:configChanges="orientation|screenSize|keyboardHidden"
                 android:parentActivityName="net.wakamesoba98.saltmanager.view.activity.MainActivity" >
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value=".view.activity.MainActivity" />
+        </activity>
+
+        <activity
+                android:name=".view.activity.PrefsActivity"
+                android:label="@string/preference_settings"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:parentActivityName="net.wakamesoba98.saltmanager.view.activity.MainActivity" >
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".view.activity.MainActivity" />
+        </activity>
+
+        <activity
+                android:name=".view.activity.LicenseActivity"
+                android:label="@string/preference_open_source_licenses"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:parentActivityName="net.wakamesoba98.saltmanager.view.activity.PrefsActivity" >
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".view.activity.PrefsActivity" />
         </activity>
     </application>
 
